--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Controllers\VersionController.cs" />
     <Compile Include="Factories\AnnotationFactory.cs" />
     <Compile Include="Factories\AreaFactory.cs" />
+    <Compile Include="Factories\AccessRightFactory.cs" />
     <Compile Include="Factories\AreaTypeFactory.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -74,6 +75,7 @@
     <Compile Include="Factories\TimePeriodFactory.cs" />
     <Compile Include="Infrastructure\Parameter.cs" />
     <Compile Include="Infrastructure\ParameterCollection.cs" />
+    <Compile Include="Models\AccessRight.cs" />
     <Compile Include="Models\Annotation.cs" />
     <Compile Include="Models\Area.cs" />
     <Compile Include="Models\AreaType.cs">
