changes to work around YM-557:
- create an abstract repository for implementing repositories such as the dividing, summing and privacylimit repositories
- when processing PrivacyLimitRepository, generate a zero value in cases where the reference statistic has a value, but the main statistic does not

--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Repositories\IReadWriteRepository.cs" />
     <Compile Include="Repositories\SqlReadRepository.cs" />
     <Compile Include="Repositories\SqlReadWriteRepository.cs" />
+    <Compile Include="Repositories\Statistics\ComparingStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\DividingStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\NormalStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\PrivacyLimitStatisticsRepository.cs" />
