Skip privacy limits when only administrative areas are used in queries
This feature existed before in commit 23f5b6c2384, but got lost in the repository rework.

SUPPORT-14527
YM-654

--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Repositories\SqlReadWriteRepository.cs" />
     <Compile Include="Repositories\Statistics\ComparingStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\DividingStatisticsRepository.cs" />
+    <Compile Include="Repositories\Statistics\IStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\NormalStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\PrivacyLimitStatisticsRepository.cs" />
     <Compile Include="Repositories\Statistics\SpecialStatisticsRepository.cs" />
