update test database credentials and unit tests

--- a/LiiteriStatisticsAPI/Web.config
+++ b/LiiteriStatisticsAPI/Web.config
@@ -46,7 +46,7 @@
   Connection strings are only needed if UseWCF != true
   -->
   <connectionStrings>
-    <add name="LiiteriDB" connectionString="data source=vps009.sitois.local\kotidw_dev;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
+    <add name="LiiteriDB" connectionString="data source=sqldev1.sitois.local;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
   </connectionStrings>
   <!--
   The entire system.serviceModel configuration is only needed if UseWCF == true
