--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -105,6 +105,6 @@
     <directoryBrowse enabled="true"/>
   </system.webServer>
   <connectionStrings>
-    <add name="LiiteriDB" connectionString="data source=vps009.sitois.local\kotidw_dev;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
+    <add name="LiiteriDB" connectionString="data source=sqldev1.sitois.local;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
   </connectionStrings>
 </configuration>
