--- a/LiiteriStatisticsTests/App.config
+++ b/LiiteriStatisticsTests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="LiiteriDB" connectionString="data source=vps009.sitois.local\kotidw_dev;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts2;MultipleActiveResultSets=True" />
+    <add name="LiiteriDB" connectionString="data source=sqldev1.sitois.local;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
   </connectionStrings>
 </configuration>
